[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/calendar_day.png" type="Texture" id=1]
[ext_resource path="res://assets/art/weather/rain.png" type="Texture" id=2]
[ext_resource path="res://scripts/CalendarDayScene.gd" type="Script" id=3]

[node name="CalendarDaySprite1" type="TextureRect"]
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayLabel" type="Label" parent="."]
margin_left = 11.9381
margin_top = 10.0013
margin_right = 135.938
margin_bottom = 43.0013
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DAYDAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherSprite" type="Sprite" parent="."]
position = Vector2( 21.4549, 70.4358 )
scale = Vector2( 0.65487, 0.588873 )
texture = ExtResource( 2 )

[node name="MemoLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 87.5286
margin_right = 140.0
margin_bottom = 145.529
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TOO MUCH WORK"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
visible = false
margin_left = 8.0
margin_top = 148.0
margin_right = 144.0
margin_bottom = 169.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time Allocated: 4hrs"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
